<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="display_scope_all"
        android:dialogTitle="@string/settings_display_scope_dialog_title"
        android:entries="@array/settings_display_scope_entries"
        android:entryValues="@array/settings_display_scope_values"
        android:key="display_scope"
        android:summary="@string/settings_display_scope_summary"
        android:title="@string/settings_display_scope_title" />

    <EditTextPreference
        android:dialogTitle="@string/settings_reviewer_dialog_title"
        android:key="display_reviewer"
        android:summary="@string/settings_reviewer_summary"
        android:title="@string/settings_reviewer_title" />

    <PreferenceCategory android:title="@string/settings_display_category_filter" >
        <EditTextPreference
            android:dialogTitle="@string/settings_display_project_dialog_title"
            android:key="display_filter_project"
            android:summary="@string/settings_display_project_summary"
            android:title="@string/settings_display_project_title" />
        <EditTextPreference
            android:dialogTitle="@string/settings_display_branch_dialog_title"
            android:key="display_filter_branch"
            android:summary="@string/settings_display_branch_summary"
            android:title="@string/settings_display_branch_title" />
    </PreferenceCategory>

</PreferenceScreen>