<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <TextView
            style="@style/settings_section_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings_server_section_server" />

        <View
            style="@style/settings_section_decoration"
            android:layout_width="wrap_content"
            android:layout_height="2dp" />

        <EditText
            android:id="@+id/settings_server_server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:hint="@string/settings_server_server_url_hint"
            android:inputType="textUri"
            android:singleLine="true" >
        </EditText>

        <TextView
            style="@style/settings_section_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/settings_server_section_credentials" />

        <View
            style="@style/settings_section_decoration"
            android:layout_width="wrap_content"
            android:layout_height="2dp" />

        <EditText
            android:id="@+id/settings_server_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:hint="@string/settings_server_username_hint"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />

        <EditText
            android:id="@+id/settings_server_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginRight="4dp"
            android:hint="@string/settings_server_password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/settings_server_authentication_description"
            android:textColor="#ff888888"
            android:textStyle="italic" />
    </LinearLayout>

</ScrollView>